--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
       <p>Click the glowing target as fast as you can!</p>
       <div id="sketch-holder"></div>
     </main>
-    <script src="sketch.js"></script>
+    <script src="sketch.js?v=3"></script>
   </body>
 </html>
